--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,7 @@ bin-release/
 
 # Other files and folders
 .settings/
+.DS_STORE
 
-# Executables
-*.air
-*.ipa
-*.apk
-
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
 .idea*
 examples/.idea*
